@startuml

title __EVENT_SEQUENCE_GRAPH's Class Diagram__\n

  namespace  {
    namespace odel.event_sequence_graph {
      class model.event_sequence_graph.Event {
          - eventID : int
          - eventName : String
          {static} - globalID : int
          + Event()
          + Event()
          + compareTo()
          + equals()
          + getDecisionTable()
          + getEventID()
          + getEventName()
          + isDTExtendedEvent()
          + setDecisionTable()
          + setEventID()
          + setEventName()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace odel.event_sequence_graph {
      class model.event_sequence_graph.EventGenerator {
          + dtActionToEsgEvent()
          + generateACopyOfEvent()
          + generateEvent()
          + generateEvent()
      }
    }
  }
  

  namespace  {
    namespace odel.event_sequence_graph {
      class model.event_sequence_graph.EventSequenceGraph {
          - eventSequenceGraph : TreeMap<Event, List<Sequence>>
          - graphName : String
          + EventSequenceGraph()
          + addEvent()
          + addEvents()
          + addSequence()
          + addSequence()
          + addSequences()
          + addSequences()
          + addSequences()
          + copyOfESG()
          + getEventSequenceGraph()
          + getGraphName()
          + getKeyEvent()
          + isEventExist()
          + isSequenceExist()
          + moveToTheNextEvent()
          + removeEvent()
          + removeSequence()
          + setEventSequenceGraph()
          + setGraphName()
          + setTheFirstEvent()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace odel.event_sequence_graph {
      class model.event_sequence_graph.Sequence {
          + Sequence()
          + equals()
          + getDestination()
          + getSource()
          + sequenceHasDestinationEvent()
          + setDestination()
          + setSource()
          + toString()
      }
    }
  }
  

  model.event_sequence_graph.Event .up.|> java.lang.Comparable
  model.event_sequence_graph.Event o-- decision_table.DecisionTable : decisionTable
  model.event_sequence_graph.EventSequenceGraph o-- model.event_sequence_graph.EventGenerator : eg
  model.event_sequence_graph.EventSequenceGraph o-- model.event_sequence_graph.Event : current
  model.event_sequence_graph.Sequence o-- model.event_sequence_graph.Event : destination
  model.event_sequence_graph.Sequence o-- model.event_sequence_graph.Event : source


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
